--- a/crates/hyperswitch_interfaces/Cargo.toml
+++ b/crates/hyperswitch_interfaces/Cargo.toml
@@ -9,9 +9,13 @@ license.workspace = true
 [dependencies]
 async-trait = "0.1.79"
 dyn-clone = "1.0.17"
+mime = "0.3.17"
+reqwest = "0.11.27"
 serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
 thiserror = "1.0.58"
 
 # First party crates
 common_utils = { version = "0.1.0", path = "../common_utils" }
 masking = { version = "0.1.0", path = "../masking" }
+hyperswitch_domain_models = { version = "0.1.0", path = "../hyperswitch_domain_models", default-features = false }
