chore: address PR comments

--- a/crates/hyperswitch_domain_models/Cargo.toml
+++ b/crates/hyperswitch_domain_models/Cargo.toml
@@ -16,7 +16,7 @@ payouts = ["api_models/payouts"]
 # First party deps
 api_models = { version = "0.1.0", path = "../api_models", features = ["errors"] }
 common_enums = { version = "0.1.0", path = "../common_enums" }
-common_utils = { version = "0.1.0", path = "../common_utils", features = ["async_ext"] }
+common_utils = { version = "0.1.0", path = "../common_utils", features = ["async_ext", "metrics"] }
 masking = { version = "0.1.0", path = "../masking" }
 diesel_models = { version = "0.1.0", path = "../diesel_models", features = ["kv_store"] }
 cards = { version = "0.1.0", path = "../cards" }
