--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -585,6 +585,7 @@ source = "logs" # The event sink to push events supports kafka or logs (stdout)
 
 [events.kafka]
 brokers = []                          # Kafka broker urls for bootstrapping the client
+fraud_check_analytics_topic = "topic"      # Kafka topic to be used for FraudCheck events
 intent_analytics_topic = "topic"      # Kafka topic to be used for PaymentIntent events
 attempt_analytics_topic = "topic"     # Kafka topic to be used for PaymentAttempt events
 refund_analytics_topic = "topic"      # Kafka topic to be used for Refund events
