removing local dev issues

--- a/config/development.toml
+++ b/config/development.toml
@@ -580,7 +580,7 @@ soft_kill = false
 enabled = true
 
 [events]
-source = "kafka"
+source = "logs"
 
 [events.kafka]
 brokers = ["localhost:9092"]
@@ -597,7 +597,7 @@ payout_analytics_topic = "hyperswitch-payout-events"
 consolidated_events_topic = "hyperswitch-consolidated-events"
 
 [analytics]
-source = "clickhouse"
+source = "sqlx"
 
 [analytics.clickhouse]
 username = "default"
