--- a/config/deployments/production.toml
+++ b/config/deployments/production.toml
@@ -284,6 +284,7 @@ ideal = { country = "NL", currency = "EUR" }
 duit_now = { country = "MY", currency = "MYR" }
 prompt_pay = { country = "TH", currency = "THB" }
 viet_qr = { country = "VN", currency = "VND" }
+local_bank_redirect = { country = "AT,BE,DE,EE,ES,FI,FR,IE,IT,LU,LV,LT,NL,PT", currency = "EUR" }
 
 [pm_filters.klarna]
 klarna = { country = "AU,AT,BE,CA,CZ,DK,FI,FR,DE,GR,IE,IT,NL,NZ,NO,PL,PT,ES,SE,CH,GB,US", currency = "CHF,DKK,EUR,GBP,NOK,PLN,SEK,USD,AUD,NZD,CAD" }
