--- a/crates/euclid/Cargo.toml
+++ b/crates/euclid/Cargo.toml
@@ -23,6 +23,7 @@ utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order
 common_enums = { version = "0.1.0", path = "../common_enums" }
 constraint_graph_macros = { version = "0.1.0", path = "../constraint_graph_macros" }
 hyperswitch_constraint_graph = { version = "0.1.0", path = "../hyperswitch_constraint_graph", features = ["viz"] }
+hyperswitch_macros = { version = "0.1.0", path = "../hyperswitch_macros" }
 euclid_macros = { version = "0.1.0", path = "../euclid_macros" }
 
 [features]
