--- a/crates/hsdev/Cargo.toml
+++ b/crates/hsdev/Cargo.toml
@@ -13,3 +13,4 @@ diesel = { version = "2.1.6", features = ["postgres"] }
 diesel_migrations = "2.1.0"
 toml = "0.5"
 clap = { version = "4.1.8", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
