chore(docker-compose): specify dependencies among services

--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -76,6 +76,11 @@ services:
     environment:
       - CARGO_HOME=/cargo_cache
       - CARGO_TARGET_DIR=/cargo_build_cache
+    depends_on:
+      pg:
+        condition: service_healthy
+      redis-standalone:
+        condition: service_healthy
     labels:
       logs: "promtail"
     healthcheck:
