--- a/crates/analytics/Cargo.toml
+++ b/crates/analytics/Cargo.toml
@@ -15,6 +15,7 @@ api_models = { version = "0.1.0", path = "../api_models", features = [
     "errors",
 ] }
 storage_impl = { version = "0.1.0", path = "../storage_impl", default-features = false }
+common_enums = { version = "0.1.0", path = "../common_enums" }
 common_utils = { version = "0.1.0", path = "../common_utils" }
 external_services = { version = "0.1.0", path = "../external_services", default-features = false }
 hyperswitch_interfaces = { version = "0.1.0", path = "../hyperswitch_interfaces" }
