--- a/loadtest/config/development.toml
+++ b/loadtest/config/development.toml
@@ -328,6 +328,7 @@ keys = "user-agent"
 
 [multitenancy]
 enabled = false
+global_tenant = { schema = "public", redis_key_prefix = "", clickhouse_database = "default"}
 
 [multitenancy.tenants]
 public = { name = "hyperswitch", base_url = "http://localhost:8080", schema = "public", redis_key_prefix = "", clickhouse_database = "default"}
