--- a/crates/common_utils/Cargo.toml
+++ b/crates/common_utils/Cargo.toml
@@ -9,7 +9,7 @@ license.workspace = true
 
 [features]
 signals = ["dep:signal-hook-tokio", "dep:signal-hook", "dep:tokio", "dep:router_env"]
-async_ext = ["dep:async-trait"]
+async_ext = ["dep:async-trait", "dep:futures"]
 logs = ["dep:router_env"]
 metrics = ["dep:router_env", "dep:futures"]
 
