--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -221,18 +221,6 @@ services:
       - ./config/grafana.ini:/etc/grafana/grafana.ini
       - ./config/grafana-datasource.yaml:/etc/grafana/provisioning/datasources/datasource.yml
 
-  promtail:
-    image: grafana/promtail:latest
-    volumes:
-      - ./logs:/var/log/router
-      - ./config:/etc/promtail
-      - /var/run/docker.sock:/var/run/docker.sock
-    command: -config.file=/etc/promtail/promtail.yaml
-    profiles:
-      - monitoring
-    networks:
-      - router_net
-
   loki:
     image: grafana/loki:latest
     ports:
@@ -361,15 +349,6 @@ services:
         soft: 262144
         hard: 262144
 
-  fluentd:
-    build: ./docker/fluentd
-    volumes:
-      - ./docker/fluentd/conf:/fluentd/etc
-    networks:
-      - router_net
-    profiles:
-      - olap
-
   opensearch:
     image: public.ecr.aws/opensearchproject/opensearch:1.3.14
     container_name: opensearch
@@ -393,3 +372,18 @@ services:
       OPENSEARCH_HOSTS: '["https://opensearch:9200"]'
     networks:
       - router_net
+
+  vector:
+    image: timberio/vector:latest-debian
+    ports:
+      - "8686"
+      - "9598"
+    profiles:
+      - olap
+    environment:
+      KAFKA_HOST: 'kafka0:29092'
+    networks:
+      - router_net
+    volumes:
+      - ./config/vector.yaml:/etc/vector/vector.yaml
+      - /var/run/docker.sock:/var/run/docker.sock
