--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -350,11 +350,12 @@ services:
         hard: 262144
 
   opensearch:
-    image: public.ecr.aws/opensearchproject/opensearch:1.3.14
+    image: opensearchproject/opensearch:2
     container_name: opensearch
     hostname: opensearch
     environment:
       - "discovery.type=single-node"
+      - OPENSEARCH_INITIAL_ADMIN_PASSWORD=0penS3arc#
     profiles:
       - olap
     ports:
@@ -363,7 +364,7 @@ services:
       - router_net
 
   opensearch-dashboards:
-    image: opensearchproject/opensearch-dashboards:1.3.14
+    image: opensearchproject/opensearch-dashboards:2
     ports:
       - 5601:5601
     profiles:
