--- a/config/vector.yaml
+++ b/config/vector.yaml
@@ -17,7 +17,7 @@ sources:
       - hyperswitch-dispute-events
     decoding:
       codec: json
-  
+
   app_logs:
     type: docker_logs
     include_labels:
@@ -29,28 +29,27 @@ sources:
   node_metrics:
     type: host_metrics
 
-
 transforms:
   plus_1_events:
     type: filter
     inputs:
       - kafka_tx_events
     condition: ".sign_flag == 1"
-  
+
   hs_server_logs:
     type: filter
     inputs:
       - app_logs
     condition: '.labels."com.docker.compose.service" == "hyperswitch-server"'
-  
+
   parsed_hs_server_logs:
     type: remap
     inputs:
       - app_logs
     source: |-
       .message = parse_json!(.message)
-  
-  opensearch_events:
+
+  events:
     type: remap
     inputs:
       - plus_1_events
@@ -58,10 +57,10 @@ transforms:
       .timestamp = from_unix_timestamp!(.created_at, unit: "seconds")
 
 sinks:
-  opensearch:
+  opensearch_events:
     type: elasticsearch
     inputs:
-      - opensearch_events
+      - events
     endpoints:
       - "https://opensearch:9200"
     id_key: message_key
@@ -83,7 +82,26 @@ sinks:
       # Add a date prefixed index for better grouping
       # index: "vector-{{ .topic }}-%Y-%m-%d"
       index: "{{ .topic }}"
-  
+
+  opensearch_logs:
+    type: elasticsearch
+    inputs:
+      - parsed_hs_server_logs
+    endpoints:
+      - "https://opensearch:9200"
+    api_version: v7
+    tls:
+      verify_certificate: false
+      verify_hostname: false
+    auth:
+      strategy: basic
+      user: admin
+      password: 0penS3arc#
+    bulk:
+      # Add a date prefixed index for better grouping
+      # index: "vector-{{ .topic }}-%Y-%m-%d"
+      index: "logs-{{ .container_name }}-%Y-%m-%d"
+
   log_events:
     type: loki
     inputs:
@@ -91,7 +109,7 @@ sinks:
     endpoint: http://loki:3100
     labels:
       source: vector
-      topic: '{{ .topic }}'
+      topic: "{{ .topic }}"
       job: kafka
     encoding:
       codec: json
@@ -112,5 +130,5 @@ sinks:
   metrics:
     type: prometheus_exporter
     inputs:
-    - vector_metrics
-    - node_metrics
+      - vector_metrics
+      - node_metrics
