add production url

--- a/config/deployments/production.toml
+++ b/config/deployments/production.toml
@@ -87,7 +87,7 @@ trustpay.base_url_bank_redirects = "https://aapi.trustpay.eu/"
 tsys.base_url = "https://gateway.transit-pass.com/"
 volt.base_url = "https://api.volt.io/"
 wise.base_url = "https://api.sandbox.transferwise.tech/"
-worldline.base_url = "https://eu.sandbox.api-ingenico.com/"
+worldline.base_url = "https://api.connect.worldline-solutions.com/"
 worldpay.base_url = "https://try.access.worldpay.com/"
 zen.base_url = "https://api.zen.com/"
 zen.secondary_base_url = "https://secure.zen.com/"
