feat: add DEK for user-auth-table

--- a/config/development.toml
+++ b/config/development.toml
@@ -647,3 +647,6 @@ enabled = false
 
 [multitenancy.tenants]
 public = { name = "hyperswitch", base_url = "http://localhost:8080", schema = "public", redis_key_prefix = ""}
+
+[user_auth_methods]
+encryption_key = ""
