refactor(generic_links): move payout_link_config to business_profile

--- a/config/development.toml
+++ b/config/development.toml
@@ -570,9 +570,9 @@ apple_pay_merchant_cert_key = "APPLE_PAY_MERCHNAT_CERTIFICATE_KEY"
 sdk_url = "http://localhost:9050/HyperLoader.js"
 expiry = 900
 [generic_link.payment_method_collect.ui_config]
-theme = "#1A1A1A"
+theme = "#4285F4"
 logo = "https://app.hyperswitch.io/HyperswitchFavicon.png"
-collector_name = "HyperSwitch"
+merchant_name = "HyperSwitch"
 [[generic_link.payment_method_collect.enabled_payment_methods]]
 payment_method = "card"
 payment_method_types = ["credit", "debit"]
@@ -580,6 +580,23 @@ payment_method_types = ["credit", "debit"]
 payment_method = "bank_transfer"
 payment_method_types = ["ach", "bacs", "sepa"]
 [[generic_link.payment_method_collect.enabled_payment_methods]]
+payment_method = "wallet"
+payment_method_types = ["paypal", "pix", "venmo"]
+
+[generic_link.payout_link]
+sdk_url = "http://localhost:9050/HyperLoader.js"
+expiry = 900
+[generic_link.payout_link.ui_config]
+theme = "#4285F4"
+logo = "https://app.hyperswitch.io/HyperswitchFavicon.png"
+merchant_name = "HyperSwitch"
+[[generic_link.payout_link.enabled_payment_methods]]
+payment_method = "card"
+payment_method_types = ["credit", "debit"]
+[[generic_link.payout_link.enabled_payment_methods]]
+payment_method = "bank_transfer"
+payment_method_types = ["ach", "bacs", "sepa"]
+[[generic_link.payout_link.enabled_payment_methods]]
 payment_method = "wallet"
 payment_method_types = ["paypal", "pix", "venmo"]
 
