--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -125,12 +125,12 @@ recon_admin_api_key = "recon_test_admin" # recon_admin API key for recon authent
 # PCI Compliant storage entity which stores payment method information
 # like card details
 [locker]
-host = ""                                # Locker host
-host_rs = ""                             # Rust Locker host
-mock_locker = true                       # Emulate a locker locally using Postgres
-locker_signing_key_id = "1"              # Key_id to sign basilisk hs locker
-locker_enabled = true                    # Boolean to enable or disable saving cards in locker
-ttl_for_storage_in_secs = 220752000      # Time to live for storage entries in locker
+host = ""                           # Locker host
+host_rs = ""                        # Rust Locker host
+mock_locker = true                  # Emulate a locker locally using Postgres
+locker_signing_key_id = "1"         # Key_id to sign basilisk hs locker
+locker_enabled = true               # Boolean to enable or disable saving cards in locker
+ttl_for_storage_in_secs = 220752000 # Time to live for storage entries in locker
 
 [delayed_session_response]
 connectors_with_delayed_session_response = "trustpay,payme" # List of connectors which has delayed session response
@@ -356,9 +356,9 @@ email_role_arn = ""        # The amazon resource name ( arn ) of the role which 
 sts_role_session_name = "" # An identifier for the assumed role session, used to uniquely identify a session.
 
 [user]
-password_validity_in_days = 90             # Number of days after which password should be updated
-two_factor_auth_expiry_in_secs = 300       # Number of seconds after which 2FA should be done again if doing update/change from inside
-totp_issuer_name = "Hyperswitch"           # Name of the issuer for TOTP
+password_validity_in_days = 90       # Number of days after which password should be updated
+two_factor_auth_expiry_in_secs = 300 # Number of seconds after which 2FA should be done again if doing update/change from inside
+totp_issuer_name = "Hyperswitch"     # Name of the issuer for TOTP
 
 #tokenization configuration which describe token lifetime and payment method for specific connector
 [tokenization]
@@ -549,7 +549,7 @@ expiry = 900
 [generic_link.payment_method_collect.ui_config]
 theme = "#1A1A1A"
 logo = "https://app.hyperswitch.io/HyperswitchFavicon.png"
-collector_name = "HyperSwitch"
+merchant_name = "HyperSwitch"
 [[generic_link.payment_method_collect.enabled_payment_methods]]
 payment_method = "card"
 payment_method_types = ["credit", "debit"]
@@ -557,6 +557,23 @@ payment_method_types = ["credit", "debit"]
 payment_method = "bank_transfer"
 payment_method_types = ["ach", "bacs", "sepa"]
 [[generic_link.payment_method_collect.enabled_payment_methods]]
+payment_method = "wallet"
+payment_method_types = ["paypal", "pix", "venmo"]
+
+[generic_link.payout_link]
+sdk_url = "http://localhost:9090/0.16.7/v0/HyperLoader.js"
+expiry = 900
+[generic_link.payout_link.ui_config]
+theme = "#1A1A1A"
+logo = "https://app.hyperswitch.io/HyperswitchFavicon.png"
+merchant_name = "HyperSwitch"
+[[generic_link.payout_link.enabled_payment_methods]]
+payment_method = "card"
+payment_method_types = ["credit", "debit"]
+[[generic_link.payout_link.enabled_payment_methods]]
+payment_method = "bank_transfer"
+payment_method_types = ["ach", "bacs", "sepa"]
+[[generic_link.payout_link.enabled_payment_methods]]
 payment_method = "wallet"
 payment_method_types = ["paypal", "pix", "venmo"]
 
@@ -662,4 +679,4 @@ enabled = false
 global_tenant = { schema = "public", redis_key_prefix = "" }
 
 [multitenancy.tenants]
-public = { name = "hyperswitch", base_url = "http://localhost:8080", schema = "public", redis_key_prefix = "", clickhouse_database = "default"} # schema -> Postgres db schema, redis_key_prefix -> redis key distinguisher, base_url -> url of the tenant 
+public = { name = "hyperswitch", base_url = "http://localhost:8080", schema = "public", redis_key_prefix = "", clickhouse_database = "default" } # schema -> Postgres db schema, redis_key_prefix -> redis key distinguisher, base_url -> url of the tenant
