--- a/crates/router/Cargo.toml
+++ b/crates/router/Cargo.toml
@@ -30,6 +30,7 @@ payouts = ["api_models/payouts", "common_enums/payouts", "hyperswitch_domain_mod
 payout_retry = ["payouts"]
 recon = ["email", "api_models/recon"]
 retry = []
+v2 = ["api_models/v2"]
 
 [dependencies]
 actix-cors = "0.6.5"
@@ -71,7 +72,7 @@ qrcode = "0.14.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 regex = "1.10.4"
-reqwest = { version = "0.11.27", features = ["json", "native-tls","__rustls", "gzip", "multipart"] }
+reqwest = { version = "0.11.27", features = ["json", "native-tls", "__rustls", "gzip", "multipart"] }
 ring = "0.17.8"
 roxmltree = "0.19.0"
 rust_decimal = { version = "1.35.0", features = ["serde-with-float", "serde-with-str"] }
@@ -126,7 +127,7 @@ isocountry = "0.3.2"
 iso_currency = "0.4.4"
 actix-http = "3.6.0"
 events = { version = "0.1.0", path = "../events" }
-totp-rs = { version = "5.5.1", features = ["gen_secret", "otpauth"]}
+totp-rs = { version = "5.5.1", features = ["gen_secret", "otpauth"] }
 serde_repr = "0.1.19"
 unidecode = "0.3.0"
 
