--- a/crates/connector_configs/toml/development.toml
+++ b/crates/connector_configs/toml/development.toml
@@ -232,6 +232,7 @@ key1="Adyen Account Id"
 merchant_secret="Source verification key"
 [adyen.metadata]
 endpoint_prefix="Live endpoint prefix"
+
 [[adyen.metadata.google_pay]]
 name="merchant_name"
 label="Google Pay Merchant Name"
@@ -262,6 +263,57 @@ initiative_context="Domain Name"
 supported_networks=["visa","masterCard","amex","discover"]
 merchant_capabilities=["supports3DS"]
 label="apple"
+
+[[adyen.metadata.apple_pay_v2]]
+name="certificate"
+label="Merchant Certificate (Base64 Encoded)"
+placeholder="Enter Merchant Certificate (Base64 Encoded)"
+required=true
+type="Text"
+[[adyen.metadata.apple_pay_v2]]
+name="certificate_keys"
+label="Merchant PrivateKey (Base64 Encoded)"
+placeholder="Enter Merchant PrivateKey (Base64 Encoded)"
+required=true
+type="Text"
+[[adyen.metadata.apple_pay_v2]]
+name="merchant_identifier"
+label="Apple Merchant Identifier"
+placeholder="Enter Apple Merchant Identifier"
+required=true
+type="Text"
+[[adyen.metadata.apple_pay_v2]]
+name="display_name"
+label="Display Name"
+placeholder="Enter Display Name"
+required=true
+type="Text"
+[[adyen.metadata.apple_pay_v2]]
+name="initiative"
+label="Domain"
+placeholder="Enter Domain"
+required=true
+type="Text"
+[[adyen.metadata.apple_pay_v2]]
+name="initiative_context"
+label="Domain Name"
+placeholder="Enter Domain Name"
+required=true
+type="Text"
+[[adyen.metadata.apple_pay_v2]]
+name="merchant_business_country"
+label="Merchant Business Country"
+placeholder="Enter Merchant Business Country"
+required=true
+type="Select"
+options=[]
+[[adyen.metadata.apple_pay_v2]]
+name="payment_processing_details_at"
+label="Payment Processing Details At"
+placeholder="Enter Payment Processing Details At"
+required=true
+type="Toggle"
+options=["Connector","HyperSwitch"]
 
 [adyenplatform_payout]
 [[adyenplatform_payout.bank_transfer]]
@@ -2179,7 +2231,7 @@ placeholder="Enter Google Pay Merchant Id"
 required=true
 type="Text"
 [[stripe.metadata.google_pay]]
-name="stripe_publishable_key"
+name="stripe:publishableKey"
 label="Stripe Publishable Key"
 placeholder="Enter Stripe Publishable Key"
 required=true
@@ -2595,13 +2647,25 @@ api_key="API Key"
 [zen.connector_webhook_details]
 merchant_secret="Source verification key"
 
-[[adyen.metadata.google_pay]]
+[[zen.metadata.google_pay]]
 name="terminal_uuid"
 label="Terminal UUID"
 placeholder="Enter Terminal UUID"
 required=true
 type="Text"
-[[adyen.metadata.google_pay]]
+[[zen.metadata.google_pay]]
+name="pay_wall_secret"
+label="Pay Wall Secret"
+placeholder="Enter Pay Wall Secret"
+required=true
+type="Text"
+[[zen.metadata.apple_pay_v2]]
+name="terminal_uuid"
+label="Terminal UUID"
+placeholder="Enter Terminal UUID"
+required=true
+type="Text"
+[[zen.metadata.apple_pay_v2]]
 name="pay_wall_secret"
 label="Pay Wall Secret"
 placeholder="Enter Pay Wall Secret"
