--- a/crates/openapi/Cargo.toml
+++ b/crates/openapi/Cargo.toml
@@ -13,6 +13,7 @@ utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order
 
 api_models = { version = "0.1.0", path = "../api_models", features = ["frm", "payouts", "openapi"] }
 common_utils = { version = "0.1.0", path = "../common_utils" }
+router_env = { version = "0.1.0", path = "../router_env" }
 
 [features]
 v2 = ["api_models/v2"]
