--- a/crates/connector_configs/toml/development.toml
+++ b/crates/connector_configs/toml/development.toml
@@ -376,6 +376,24 @@ api_key="API Key"
 key1="Client ID"
 [airwallex.connector_webhook_details]
 merchant_secret="Source verification key"
+[[airwallex.metadata.google_pay]]
+name="merchant_name"
+label="Google Pay Merchant Name"
+placeholder="Enter Google Pay Merchant Name"
+required=true
+type="Text"
+[[airwallex.metadata.google_pay]]
+name="merchant_id"
+label="Google Pay Merchant Id"
+placeholder="Enter Google Pay Merchant Id"
+required=true
+type="Text"
+[[airwallex.metadata.google_pay]]
+name="gateway_merchant_id"
+label="Google Pay Merchant Key"
+placeholder="Enter Google Pay Merchant Key"
+required=true
+type="Text"
 
 
 [authorizedotnet]
@@ -875,6 +893,7 @@ merchant_secret="Source verification key"
 api_key="Public Key"
 key1="Merchant Id"
 api_secret="Private Key"
+
 [braintree.metadata.merchant_account_id]
 name="merchant_account_id"
 label="Merchant Account Id"
@@ -1280,13 +1299,13 @@ label="Google Pay Merchant Key"
 placeholder="Enter Google Pay Merchant Key"
 required=true
 type="Text"
+
 [cybersource.metadata.acquirer_bin]
 name="acquirer_bin"
 label="Acquirer Bin"
 placeholder="Enter Acquirer Bin"
 required=false
 type="Text"
-
 [cybersource.metadata.acquirer_merchant_id]
 name="acquirer_merchant_id"
 label="Acquirer Merchant ID"
@@ -1433,6 +1452,7 @@ api_key = "Integration Key"
 api_key="API Key"
 key1="Merchant ID"
 api_secret="API Secret"
+
 [fiserv.metadata.terminal_id]
 name="terminal_id"
 label="Terminal ID"
@@ -1540,15 +1560,9 @@ merchant_secret="Source verification key"
 [globalpay.connector_auth.BodyKey]
 api_key="Global App Key"
 key1="Global App ID"
-[globalpay.metadata.account_name]
-name="account_name"
-label="Account Name"
-placeholder="Enter Account Name"
-required=true
-type="Text"
-
 [globalpay.connector_webhook_details]
 merchant_secret="Source verification key"
+
 [[globalpay.metadata.google_pay]]
 name="merchant_name"
 label="Google Pay Merchant Name"
@@ -1565,6 +1579,13 @@ type="Text"
 name="gateway_merchant_id"
 label="Google Pay Merchant Key"
 placeholder="Enter Google Pay Merchant Key"
+required=true
+type="Text"
+
+[globalpay.metadata.account_name]
+name="account_name"
+label="Account Name"
+placeholder="Enter Account Name"
 required=true
 type="Text"
 
@@ -3417,25 +3438,27 @@ api_key="API Key"
 [zen.connector_webhook_details]
 merchant_secret="Source verification key"
 
-[[zen.metadata.google_pay]]
+
+[[zen.metadata.apple_pay_v2]]
 name="terminal_uuid"
 label="Terminal UUID"
 placeholder="Enter Terminal UUID"
 required=true
 type="Text"
-[[zen.metadata.google_pay]]
+[[zen.metadata.apple_pay_v2]]
 name="pay_wall_secret"
 label="Pay Wall Secret"
 placeholder="Enter Pay Wall Secret"
 required=true
 type="Text"
-[[zen.metadata.apple_pay_v2]]
+
+[[zen.metadata.google_pay]]
 name="terminal_uuid"
 label="Terminal UUID"
 placeholder="Enter Terminal UUID"
 required=true
 type="Text"
-[[zen.metadata.apple_pay_v2]]
+[[zen.metadata.google_pay]]
 name="pay_wall_secret"
 label="Pay Wall Secret"
 placeholder="Enter Pay Wall Secret"
@@ -3746,7 +3769,7 @@ type="Text"
 [netcetera.metadata.endpoint_prefix]
 name="endpoint_prefix"
 label="Live endpoint prefix"
-placeholder="Enter Live endpoint prefix"
+placeholder="string that will replace '{prefix}' in this base url 'https://{prefix}.3ds-server.prev.netcetera-cloud-payment.ch'"
 required=true
 type="Text"
 [netcetera.metadata.merchant_country_code]
