--- a/crates/common_utils/Cargo.toml
+++ b/crates/common_utils/Cargo.toml
@@ -8,17 +8,17 @@ readme = "README.md"
 license.workspace = true
 
 [features]
-signals = ["dep:signal-hook-tokio", "dep:signal-hook", "dep:tokio", "dep:router_env"]
-async_ext = ["dep:async-trait"]
+signals = ["dep:signal-hook-tokio", "dep:signal-hook", "dep:tokio", "dep:router_env", "dep:futures"]
+async_ext = ["dep:async-trait", "dep:futures"]
 logs = ["dep:router_env"]
-metrics = ["dep:router_env"]
+metrics = ["dep:router_env", "dep:futures"]
 
 [dependencies]
 async-trait = { version = "0.1.79", optional = true }
 bytes = "1.6.0"
 diesel = "2.1.5"
 error-stack = "0.4.1"
-futures = { version = "0.3.30" }
+futures = { version = "0.3.30", optional = true }
 hex = "0.4.3"
 http = "0.2.12"
 md5 = "0.7.0"
