--- a/config/development.toml
+++ b/config/development.toml
@@ -573,15 +573,10 @@ expiry = 900
 theme = "#4285F4"
 logo = "https://app.hyperswitch.io/HyperswitchFavicon.png"
 merchant_name = "HyperSwitch"
-[[generic_link.payment_method_collect.enabled_payment_methods]]
-payment_method = "card"
-payment_method_types = ["credit", "debit"]
-[[generic_link.payment_method_collect.enabled_payment_methods]]
-payment_method = "bank_transfer"
-payment_method_types = ["ach", "bacs", "sepa"]
-[[generic_link.payment_method_collect.enabled_payment_methods]]
-payment_method = "wallet"
-payment_method_types = ["paypal", "pix", "venmo"]
+[generic_link.payment_method_collect.enabled_payment_methods]
+card = ["credit", "debit"]
+bank_transfer = ["ach", "bacs", "sepa"]
+wallet = ["paypal", "pix", "venmo"]
 
 [generic_link.payout_link]
 sdk_url = "http://localhost:9050/HyperLoader.js"
@@ -590,15 +585,10 @@ expiry = 900
 theme = "#4285F4"
 logo = "https://app.hyperswitch.io/HyperswitchFavicon.png"
 merchant_name = "HyperSwitch"
-[[generic_link.payout_link.enabled_payment_methods]]
-payment_method = "card"
-payment_method_types = ["credit", "debit"]
-[[generic_link.payout_link.enabled_payment_methods]]
-payment_method = "bank_transfer"
-payment_method_types = ["ach", "bacs", "sepa"]
-[[generic_link.payout_link.enabled_payment_methods]]
-payment_method = "wallet"
-payment_method_types = ["paypal", "pix", "venmo"]
+[generic_link.payout_link.enabled_payment_methods]
+card = ["credit", "debit"]
+bank_transfer = ["ach", "bacs", "sepa"]
+wallet = ["paypal", "pix", "venmo"]
 
 [payment_link]
 sdk_url = "http://localhost:9050/HyperLoader.js"
