--- a/config/deployments/env_specific.toml
+++ b/config/deployments/env_specific.toml
@@ -161,7 +161,7 @@ queue_strategy = "Fifo"   # Add the queue strategy used by the database bb8 clie
 sdk_url = "http://localhost:9090/0.16.7/v0/HyperLoader.js"
 expiry = 900
 [generic_link.payment_method_collect.ui_config]
-theme = "#1A1A1A"
+theme = "#4285F4"
 logo = "https://app.hyperswitch.io/HyperswitchFavicon.png"
 merchant_name = "HyperSwitch"
 [generic_link.payment_method_collect.enabled_payment_methods]
@@ -173,7 +173,7 @@ wallet = ["paypal", "pix", "venmo"]
 sdk_url = "http://localhost:9090/0.16.7/v0/HyperLoader.js"
 expiry = 900
 [generic_link.payout_link.ui_config]
-theme = "#1A1A1A"
+theme = "#4285F4"
 logo = "https://app.hyperswitch.io/HyperswitchFavicon.png"
 merchant_name = "HyperSwitch"
 [generic_link.payout_link.enabled_payment_methods]
