feat: encryption service integration to support batch encryption and decryption

--- a/crates/hyperswitch_domain_models/Cargo.toml
+++ b/crates/hyperswitch_domain_models/Cargo.toml
@@ -9,6 +9,7 @@ license.workspace = true
 
 [features]
 default = ["olap", "payouts"]
+encryption_service =[]
 olap = []
 payouts = ["api_models/payouts"]
 
