--- a/crates/router/Cargo.toml
+++ b/crates/router/Cargo.toml
@@ -9,8 +9,9 @@ readme = "README.md"
 license.workspace = true
 
 [features]
-default = ["kv_store", "stripe", "oltp", "olap", "backwards_compatibility", "accounts_cache", "dummy_connector", "payouts", "payout_retry", "business_profile_routing", "connector_choice_mca_id", "profile_specific_fallback_routing", "retry", "frm"]
+default = ["kv_store", "stripe", "oltp", "olap", "backwards_compatibility", "accounts_cache", "dummy_connector", "payouts", "payout_retry", "business_profile_routing", "connector_choice_mca_id", "profile_specific_fallback_routing", "retry", "frm", "encryption_service"]
 keymanager_mtls = ["reqwest/rustls-tls","common_utils/keymanager_mtls"]
+encryption_service = ["hyperswitch_domain_models/encryption_service"]
 email = ["external_services/email", "scheduler/email", "olap"]
 frm = ["api_models/frm"]
 stripe = ["dep:serde_qs"]
@@ -31,7 +32,6 @@ payouts = ["api_models/payouts", "common_enums/payouts", "hyperswitch_domain_mod
 payout_retry = ["payouts"]
 recon = ["email", "api_models/recon"]
 retry = []
-encryption_service =[]
 
 [dependencies]
 actix-cors = "0.6.5"
