changed directory of enum Application Error to common_enums and added Result in fn new_with_implicit_entries() in crates/router_env/src/logger/formatter.rs

--- a/crates/hyperswitch_interfaces/Cargo.toml
+++ b/crates/hyperswitch_interfaces/Cargo.toml
@@ -25,6 +25,7 @@ thiserror = "1.0.58"
 time = "0.3.35"
 
 # First party crates
+common_enums = { version = "0.1.0", path = "../common_enums" }
 common_utils = { version = "0.1.0", path = "../common_utils" }
 hyperswitch_domain_models = { version = "0.1.0", path = "../hyperswitch_domain_models", default-features = false }
 masking = { version = "0.1.0", path = "../masking" }
