Converted metadata into string format, updated password credential for opensearch

--- a/config/docker_compose.toml
+++ b/config/docker_compose.toml
@@ -494,7 +494,7 @@ host = "https://opensearch:9200"
 [opensearch.auth]
 auth = "basic"
 username = "admin"
-password = "admin"
+password = "0penS3arc#"
 region = "eu-central-1"
 
 [opensearch.indexes]
