--- a/docker/fluentd/conf/fluent.conf
+++ b/docker/fluentd/conf/fluent.conf
@@ -125,7 +125,7 @@
     index_name hyperswitch-dispute-events
     id_key dispute_id
     user admin
-    password admin
+    password '0penS3arc#'
     ssl_verify false
     prefer_oj_serializer true
     reload_on_failure true
